tests/typing/fail/array/array_aliasing.act
contract A

constructor()

creates
  uint[2][2] x := [[0,0],[0,0]]

transition f()

storage

  x := [[1,2],[3,4]]
  x[0] := [10,20]
